# axum-multipart-test-examples

./: Cargo.toml  README.md
dummy/: test_upload.csv
examples/: axum_test_example.rs  http_server_with_reqwest.rs  oneshot.rs
src/: lib.rs
