[package]
name = "axum-multipart-test-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["multipart"] }
csv = "1.3.1"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.97"
axum-test = "17.3"
common-multipart-rfc7578 = "0.7.0"
http-body-util = "0.1.3"
reqwest = { version = "0.11", features = ["multipart", "rustls-tls"], default-features = false }
tower = "0.5.2"
